--- a/Stijn_Devolder.mw
+++ b/Stijn_Devolder.mw
@@ -15,8 +15,9 @@ In [[2002]] es't ie prof gekoomn by [[Vlaanderen-T-Interim]]. Achter een poar ip
 *2007: tydrit Driedoagse van De Panne
 *2007: 3de in de Rounde van Zwitserland
 *2007: Kampioen va België
-*2007: winnoare tydrit in de Rounde van Ôostnryk
-*2007: winnoare eindklassement van de Rounde van Ôostnryk
+*2007: tydrit in de Rounde van Ôostnryk
+*2007: eindklassement van de Rounde van Ôostnryk
+*2008: Rounde van Vloandern
 
 ==Ploegn==
 *2001 - [[Mapei (wielerploeg)|Mapei-Quick·Step]]
