/* Palmares */  Rounde van Algarve

--- a/Stijn_Devolder.mw
+++ b/Stijn_Devolder.mw
@@ -12,11 +12,13 @@ In [[2002]] es't ie prof gekoomn by [[Vlaanderen-T-Interim]]. Achter een poar ip
 *[[2006]]: tydrit [[Rounde van België]]
 *2006: 8ste [[Rounde van Duutsland]] 
 *2006: 11de [[Rounde van Spanje]] 
-*2007: tydrit Driedoagse van De Panne
+*2007: Tydrit Driedoagse van De Panne
 *2007: 3de in de Rounde van Zwitserland
 *2007: Kampioen va België
 *2007: tydrit in de Rounde van Ôostnryk
 *2007: eindklassement van de Rounde van Ôostnryk
+*2008: Tydrit Rounde van Algarve 
+*2008: Eindwinnoare Rounde van Algarve
 *2008: Rounde van Vloandern
 
 ==Ploegn==
