--- a/Stijn_Devolder.mw
+++ b/Stijn_Devolder.mw
@@ -3,7 +3,7 @@
 ==Carrière==
 Stijn Devolder es ols dertienjoarige begonn by de wielerclub 'De Schildpadden'. In [[1994]] es't ie overgestapt noa de amateurploeg [[De Kortrijkse Groeningespurters]]. Ie es't er gebleevn tot in [[1999]]. Doarachter es't ie begunn ryn by de Merckx-boys, omda't ie ozô mêer internationoale wedstrydn koste ryn. 
 
-In [[2002]] es't ie prof gekoomn by [[Vlaanderen-T-Interim]]. Achter een poar ipmerkelike prestoaties (twidde in de GP Fayt-le Franc en derde in de [[E3 Prys Vloandern]] en êreplekkn in de [[Rounde van Vloandern]], Rund um Köln en de [[vierdoagse van Duunkerke]]) mocht ie begunn by [[US Postal]] ounder [[Dirk Demol]] in [[2003]]. In [[2004]] eit ie zyn êeste overwinnienge gehoald by de profs: ne rit in de Vierdoagse van Duunkerke. Stillekesan weirdt ôok duudelyk da't ie rounderennercapaciteitn eit, wa da leidde tot êreplekkn in vee roundes. In [[2007]] kwam doavan de bevestigienge, deur zyn eindoverwinnienge in de [[Rounde van Ôostnryk]]. Loater ip't joar eit ie ôok nog êene dag de goudn trui gedroagn in de [[Rounde van Spanje]], omda't ie êestes stound in't klassement. In 2008 kwam er vorlopige oogtepunt van zyn carrière; hêel de finale zat Devolder mei van vôorn, en op e goe 20 kilomeiter rêed 'n ollêne weg en en blêef sterk deuregoan tout in Meerbeke.
+In [[2002]] es't ie prof gekoomn by [[Vlaanderen-T-Interim]]. Achter een poar ipmerkelike prestoaties (twidde in de GP Fayt-le Franc en derde in de [[E3 Prys Vloandern]] en êreplekkn in de [[Rounde van Vloandern]], Rund um Köln en de [[vierdoagse van Duunkerke]]) mocht ie begunn by [[US Postal]] ounder [[Dirk Demol]] in [[2003]]. In [[2004]] eit ie zyn êeste overwinnienge gehoald by de profs: ne rit in de Vierdoagse van Duunkerke. Stillekesan weirdt ôok duudelyk da't ie rounderennercapaciteitn eit, wa da leidde tot êreplekkn in vee roundes. In [[2007]] kwam doavan de bevestigienge, deur zyn eindoverwinnienge in de [[Rounde van Ôostnryk]]. Loater ip't joar eit ie ôok nog êene dag de goudn trui gedroagn in de [[Rounde van Spanje]], omda't ie êestes stound in't klassement. In 2008 kwam er vôorlôpige ôogtepunt van zyn carrière toen da't ie de [[Rounde van Vloandern]] won. Hêel de finale zat Devolder mee van vôorn, en op e goe 20 kilomeiter rêed 'n ollêne weg en en blêef sterk deuregoan tout in Meerbeke.
 
 ==Palmares==
 *2004: winnoare rit in vierdoagse van Duunkerke
