--- a/Canada.mw
+++ b/Canada.mw
@@ -108,6 +108,7 @@ Canada is officieel in zyn hêeln tweitoalig, moa buutn Québec belet je doa ni 
 [[nds:Kanada]]
 [[nds-nl:Kannede]]
 [[ne:क्यानाडा]]
+[[nl:Canada]]
 [[nn:Canada]]
 [[no:Canada]]
 [[nov:Kanada]]
