--- a/Computer.mw
+++ b/Computer.mw
@@ -84,6 +84,7 @@ Binn in de computer zit der hardware, lik het [[moederbord]]. Wuk dat diene hard
 [[nap:Computer]]
 [[nds:Reekner]]
 [[nds-nl:Komputer]]
+[[nl:Computer]]
 [[ne:कम्प्युटर]]
 [[new:कम्प्युटर]]
 [[nn:Datamaskin]]
