--- a/Ôostnryk.mw
+++ b/Ôostnryk.mw
@@ -53,72 +53,152 @@ Plekkn lik Tirol, Salzkammergut, Innsbruck, de Ôostnryksche Alpn, Salzburg, Wee
 [[af:Oostenryk]]
 [[als:Österreich]]
 [[am:ኦስትሪያ]]
-[[an:Austria]]
 [[ang:Ēastrīce]]
-[[ar:نمسا]]
+[[ar:النمسا]]
+[[an:Austria]]
 [[arc:ܢܡܣܐ]]
+[[roa-rup:Austria]]
+[[frp:Ôtrich·e]]
 [[ast:Austria]]
 [[az:Avstriya]]
-[[bar:Östareich]]
-[[bat-smg:Austrėjė]]
+[[bn:অস্ট্রিয়া]]
+[[zh-min-nan:Tang-kok]]
 [[be:Аўстрыя]]
 [[be-x-old:Аўстрыя]]
-[[bg:Австрия]]
-[[bn:অস্ট্রিয়া]]
+[[bar:Östareich]]
 [[bo:ཨོ་ཏི་ཀླི]]
-[[bpy:অস্ট্রিয়া]]
-[[br:Aostria]]
 [[bs:Austrija]]
+[[br:Aostria]]
+[[bg:Австрия]]
 [[ca:Àustria]]
-[[ce:Австри]]
-[[ceb:Austriya]]
-[[co:Austria]]
-[[cs:Rakousko]]
-[[csb:Aùstrëjackô]]
-[[cu:Аѵстрї]]
 [[cv:Австри]]
+[[ceb:Austriya]]
+[[cs:Rakousko]]
+[[co:Austria]]
 [[cy:Awstria]]
 [[da:Østrig]]
+[[pdc:Eestereich]]
 [[de:Österreich]]
-[[diq:Awıstırya]]
 [[dv:އޮސްޓުރިއާ]]
+[[dsb:Awstriska]]
 [[dz:ཨས་ཊི་ཡ་]]
-[[el:Αυστρία]]
 [[en:Austria]]
-[[eo:Aŭstrio]]
-[[es:Austria]]
 [[et:Austria]]
+[[el:Αυστρία]]
+[[es:Austria]]
+[[eo:Aŭstrio]]
 [[eu:Austria]]
 [[fa:اتریش]]
-[[fi:Itävalta]]
-[[fiu-vro:Austria]]
 [[fo:Eysturríki]]
 [[fr:Autriche]]
-[[frp:Ôtrich·e]]
-[[fur:Austrie]]
 [[fy:Eastenryk]]
+[[fur:Austrie]]
 [[ga:An Ostair]]
+[[gv:Yn Austeyr]]
 [[gd:An Ostair]]
 [[gl:Austria - Österreich]]
 [[gu:ઑસ્ટ્રિયા]]
-[[gv:Yn Austeyr]]
 [[hak:O-thi-li]]
-[[he:אוסטריה]]
-[[hi:ऑस्ट्रिया]]
-[[hr:Austrija]]
-[[hsb:Awstriska]]
-[[ht:Otrich]]
-[[hu:Ausztria]]
+[[ko:오스트리아]]
 [[hy:Ավստրիա]]
-[[ia:Austria]]
-[[id:Austria]]
-[[ie:Austria]]
-[[ilo:Austria]]
+[[hi:ऑस्ट्रिया]]
+[[hsb:Awstriska]]
+[[hr:Austrija]]
 [[io:Austria]]
+[[ilo:Austria]]
+[[bpy:অস্ট্রিয়া]]
+[[id:Austria]]
+[[ia:Austria]]
+[[ie:Austria]]
+[[os:Австри]]
 [[is:Austurríki]]
 [[it:Austria]]
-[[ja:オーストリア]]
-[[jbo:sungu'e]]
+[[he:אוסטריה]]
 [[jv:Austria]]
+[[pam:Austria]]
 [[ka:ავსტრია]]
+[[csb:Aùstrëjackô]]
 [[kk:Аустрия]]
+[[kw:Estrych]]
+[[ky:Австрия]]
+[[sw:Austria]]
+[[ht:Otrich]]
+[[ku:Avûstûrya]]
+[[lad:אאוסטריה]]
+[[la:Austria]]
+[[lv:Austrija]]
+[[lb:Éisträich]]
+[[lt:Austrija]]
+[[lij:Austria]]
+[[li:Oesteriek]]
+[[ln:Otrish]]
+[[jbo:sungu'e]]
+[[hu:Ausztria]]
+[[mk:Австрија]]
+[[mg:Aotrisy]]
+[[ml:ഓസ്ട്രിയ]]
+[[mt:Awstrija]]
+[[mr:ऑस्ट्रिया]]
+[[ms:Austria]]
+[[mn:Австри]]
+[[na:Austria]]
+[[nl:Oostenrijk]]
+[[nds-nl:Oostnriek]]
+[[ne:अष्ट्रीया]]
+[[ja:オーストリア]]
+[[ce:Австри]]
+[[no:Østerrike]]
+[[nn:Austerrike]]
+[[nrm:Autriche]]
+[[nov:Austria]]
+[[oc:Àustria]]
+[[ug:ئاۋستىرىيە]]
+[[uz:Avstria]]
+[[pag:Austria]]
+[[ps:اطريش]]
+[[km:អូត្រីហ្ស]]
+[[pms:Àustria]]
+[[nds:Öösterriek]]
+[[pl:Austria]]
+[[pt:Áustria]]
+[[crh:Avstriya]]
+[[ksh:Ößtrish]]
+[[ro:Austria]]
+[[rm:Austria]]
+[[qu:Awstiriya]]
+[[ru:Австрия]]
+[[se:Nuortariika]]
+[[sa:आस्ट्रिया]]
+[[sco:Austrick]]
+[[sq:Austria]]
+[[scn:Austria]]
+[[simple:Austria]]
+[[sk:Rakúsko]]
+[[cu:Аѵстрї]]
+[[sl:Avstrija]]
+[[sr:Аустрија]]
+[[sh:Austrija]]
+[[stq:Aastriek]]
+[[fi:Itävalta]]
+[[sv:Österrike]]
+[[tl:Austria]]
+[[ta:ஆஸ்திரியா]]
+[[tet:Áustria]]
+[[th:ประเทศออสเตรีย]]
+[[vi:Áo]]
+[[tg:Австрия]]
+[[tr:Avusturya]]
+[[tk:Awstriýa]]
+[[udm:Австрия]]
+[[uk:Австрія]]
+[[ur:آسٹریا]]
+[[vec:Austria]]
+[[vo:Lösterän]]
+[[fiu-vro:Austria]]
+[[war:Austrya]]
+[[wo:Ótriis]]
+[[yi:עסטרייך]]
+[[zh-yue:奧地利]]
+[[diq:Awıstırya]]
+[[bat-smg:Austrėjė]]
+[[zh:奥地利]]
