--- a/Winter.mw
+++ b/Winter.mw
@@ -53,6 +53,7 @@ De boomn en de plantn stoppn mi groeien. En sommigte bêestn oudn ton nundern [[
 [[mr:हिवाळा]]
 [[ms:Musim sejuk]]
 [[nds-nl:Wienter]]
+[[nl:Winter]]
 [[nn:Vinter]]
 [[no:Vinter]]
 [[pl:Zima]]
