--- a/Renaissance.mw
+++ b/Renaissance.mw
@@ -48,6 +48,7 @@ De renaissance teldege gekende architectn lik [[Michelangelo]], Baldassare Peruz
 [[ms:Zaman Pembaharuan]]
 [[nds:Renaissance]]
 [[nds-nl:Renaissance]]
+[[nl:Renaissance]]
 [[nn:Renessansen]]
 [[no:Renessansen]]
 [[oc:Renaissença]]
