--- a/Aminozuur.mw
+++ b/Aminozuur.mw
@@ -79,6 +79,7 @@ Der zyn twêe verschillige sôortn aminozuurn: de zogezeide 'essentiële' aminoz
 [[lt:Aminorūgštis]]
 [[lv:Aminoskābes]]
 [[mk:Амино киселина]]
+[[nl:Aminozuur]]
 [[nn:Aminosyre]]
 [[no:Aminosyre]]
 [[nov:Amino-aside]]
