--- a/Astrologie.mw
+++ b/Astrologie.mw
@@ -51,6 +51,7 @@ Nen oroscoop weirdt vôorngesteld deur nen cirkel. Diene cirkel et 12 uuzen van 
 [[ml:ജ്യോതിഷം]]
 [[ms:Astrologi]]
 [[mt:Astroloġija]]
+[[nl:Astrologie]]
 [[nn:Astrologi]]
 [[no:Astrologi]]
 [[nrm:Astrologie]]
