--- a/Irrationoale_getalln.mw
+++ b/Irrationoale_getalln.mw
@@ -36,6 +36,7 @@ De [[rationoale getalln]] zyn dedie daj wel kunt schryvn lik 'n quotiënt van tw
 [[lmo:Nümar irazziunaal]]
 [[lo:ຈຳນວນອະປົກກະຕິ]]
 [[lt:Iracionalusis skaičius]]
+[[nl:Irrationaal getal]]
 [[nn:Irrasjonelle tal]]
 [[no:Irrasjonalt tall]]
 [[pl:Liczby niewymierne]]
