--- a/Stijn_Devolder.mw
+++ b/Stijn_Devolder.mw
@@ -1,11 +1,12 @@
 {{plat|Kortryks}}
 
-'''Stijn Devolder''' ([[Oarelbeke]], [[29 ogustus]] [[1979]]), ''volderke'' voo de fans,  es nen [[West-Vloandern|West-Vlamsche]] [[coureur]]. Omda't ie nogol redelik omôge kan ryn en nen goein tydryder es, weirdt ie gezien als de bestn rounderenner va [[België]] van't moment.
+'''Stijn Devolder''' ([[Oarelbeke]], [[29 ogustus]] [[1979]]), ''Volderke'' voo de fans,  es nen [[West-Vloandern|West-Vlamsche]] [[coureur]]. Omda't ie nogol redelik omôge kan ryn en nen goein tydryder es, weirdt ie gezien als de bestn rounderenner va [[België]] van 't moment.
 
 ==Carrière==
 Stijn Devolder es ols dertienjoarige begonn by de wielerclub 'De Schildpadden'. In [[1994]] es't ie overgestapt noa de amateurploeg [[De Kortrijkse Groeningespurters]]. Ie es't er gebleevn tot in [[1999]]. Doarachter es't ie begunn ryn by de Merckx-boys, omda't ie ozô mêer internationoale wedstrydn koste ryn. 
 
-In [[2002]] es't ie prof gekoomn by [[Vlaanderen-T-Interim]]. Achter een poar ipmerkelike prestoaties (twidde in de GP Fayt-le Franc en derde in de [[E3 Prys Vloandern]] en êreplekkn in de [[Rounde van Vloandern]], Rund um Köln en de [[vierdoagse van Duunkerke]]) mocht ie begunn by [[US Postal]] ounder [[Dirk Demol]] in [[2003]]. In [[2004]] eit ie zyn êeste overwinnienge gehoald by de profs: ne rit in de Vierdoagse van Duunkerke. Stillekesan weirdt ôok duudelyk da't ie rounderennercapaciteitn eit, wa da leidde tot êreplekkn in vee roundes. In [[2007]] kwam doavan de bevestigienge, deur zyn eindoverwinnienge in de [[Rounde van Ôostnryk]]. Loater ip't joar eit ie ôok nog êene dag de goudn trui gedroagn in de [[Rounde van Spanje]], omda't ie êestes stound in't klassement. In 2008 kwam er vôorlôpige ôogtepunt van zyn carrière toen da't ie de [[Rounde van Vloandern]] won. Hêel de finale zat Devolder mee van vôorn, en ip e goeie 20 kilomeiters reed ie ollêne weg en blêef 't ie sterk deuregoan tout in Meerbeke.
+In [[2002]] es't ie prof gekoomn by [[Vlaanderen-T-Interim]]. Achter een poar ipmerkelike prestoaties (twidde in de GP Fayt-le Franc en derde in de [[E3 Prys Vloandern]] en êreplekkn in de [[Rounde van Vloandern]], Rund um Köln en de [[Vierdoagse van Duunkerke]]) mocht ie begunn by [[US Postal]] ounder [[Dirk Demol]] in [[2003]]. 
+In [[2004]] eit ie zyn êeste overwinnienge gehoald by de profs: ne rit in de Vierdoagse van Duunkerke. Stillekesan weirdt ôok duudelyk da't ie rounderennercapaciteitn eit, wa da leidde tot êreplekkn in vee roundes. In [[2007]] kwam doavan de bevestigienge, deur zyn eindoverwinnienge in de [[Rounde van Ôostnryk]]. Loater ip't joar eit ie ôok nog êene dag de goudn trui gedroagn in de [[Rounde van Spanje]], omda't ie êestes stound in't klassement. In 2008 kwam et vôorlôpige ôogtepunt van zyn carrière toen da't ie de [[Rounde van Vloandern]] won. Hêel de finale zat Devolder mee van vôorn, en ip e goeie 20 kilomeiters reed ie ollêne weg en blêef 't ie sterk deuregoan tout in Meerbeke.
 
 ==Palmares==
 *2004: winnoare rit in vierdoagse van Duunkerke
