--- a/Barack_Obama.mw
+++ b/Barack_Obama.mw
@@ -46,6 +46,7 @@ In 2004 dei Obama mei om senateur te komn. E won en azo wos 'n 'n vuufdn zwortn 
 [[lt:Barack Obama]]
 [[ml:ബറാക്ക് ഒബാമ]]
 [[mr:बराक ओबामा]]
+[[nl:Barack Obama]]
 [[no:Barack Obama]]
 [[pdc:Barack Obama]]
 [[pl:Barack Obama]]
