--- a/Evolutietheorie.mw
+++ b/Evolutietheorie.mw
@@ -28,6 +28,7 @@ Oloewel dan nie olle menschn geloovn in d'evolutietheorie (surtout creationistn)
 [[lb:Evolutioun]]
 [[lt:Evoliucija]]
 [[mk:Еволуција]]
+[[nl:Evolutietheorie]]
 [[no:Evolusjon]]
 [[pl:Ewolucja biologiczna]]
 [[pt:Evolução]]
