--- a/Klinieke.mw
+++ b/Klinieke.mw
@@ -34,6 +34,7 @@ E '''klinieke''' is een instellienge wo da [[ziek]]e menschn verzorgd wordn, of 
 [[lt:Ligoninė]]
 [[mg:Hopitaly]]
 [[ms:Hospital]]
+[[nl:Ziekenhuis]]
 [[nn:Sjukehus]]
 [[no:Sykehus]]
 [[pl:Szpital]]
