--- a/Rounde_van_Vloandern.mw
+++ b/Rounde_van_Vloandern.mw
@@ -14,6 +14,9 @@ De '''Rounde van Vloandern''' is de belangrykste [[koerse]] van [[Vloandern]]. D
 *2007	[[Alessandro Ballan]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 *2008	[[Stijn Devolder]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 
+== Mêeste overwinniengn ==
+Achiel Buysse, Fiorenzo Magni, [[Eric Leman]] en Johan Museeuw en elke 3 keirs de Rounde ewonn.
+
 ==Beklimmiengn uut de Rounde van Vloandern==
 {| width=65%
 | valign=top align=left width=33% |
