--- a/Hemellichoam.mw
+++ b/Hemellichoam.mw
@@ -37,6 +37,7 @@ De soortn van emellichoamn zyn:
 [[ka:ციური სხეული]]
 [[ko:천체]]
 [[lb:Himmelskierper]]
+[[nl:Hemellichaam]]
 [[no:Himmellegeme]]
 [[pl:Ciało niebieskie]]
 [[pt:Corpo celeste]]
