--- a/Eric_Leman.mw
+++ b/Eric_Leman.mw
@@ -1,6 +1,6 @@
-'''Eric Leman''' ([[17 juli]] [[1946]] in [[Legem]]) wos overtyd koereur. En is surtout ekend omdatn 3 kirs de [[Rounde van Vloandern]] (in 1970, 1972 en 1973) ewon et. 't Zyn mo 3 ander koereurs die dat oek ekun en (Achiel Buysse, Fiorenzo Magni en [[Johan Museeuw]]). En et oek wel nog ander grôte koersen ewonn, mo gin klassiekers.
+'''Eric Leman''' ([[17 juli]] [[1946]] in [[Legem]]) wos overtyd [[coureur]]. En is surtout ekend omdatn 3 kirs de [[Rounde van Vloandern]] (in 1970, 1972 en 1973) ewon et. 't Zyn mo 3 ander coureurs die dat ouk ekun en (Achiel Buysse, Fiorenzo Magni en [[Johan Museeuw]]). En et ouk wel nog ander grôte koersen ewonn, mo gin klassiekers.
 
-==Belangriekste overwinniengn==
+==Belangrykste overwinniengn==
 *3x [[Rounde van Vloandern]]
 *1x [[Kuurne-Brussel-Kuurne]]
 *5x rit in de [[Rounde van Vrankryk]]
