--- a/Dune.mw
+++ b/Dune.mw
@@ -36,6 +36,7 @@ De duunn langs de Vlamsche kust moakn dêel uut van een stroke die lopt van Noor
 [[lt:Kopa]]
 [[mk:Дина]]
 [[nds:Düün]]
+[[nl:Duin]]
 [[nn:Sanddyne]]
 [[no:Sanddyne]]
 [[nrm:Mielle]]
