--- a/Gardameer.mw
+++ b/Gardameer.mw
@@ -59,6 +59,7 @@ Weegns zyn unieke liggienge es et Gardameer êen van de grôotste toeristische t
 [[lt:Gardos ežeras]]
 [[lv:Gardas ezers]]
 [[mk:Гарда (езеро)]]
+[[nl:Gardameer]]
 [[nn:Gardasjøen]]
 [[no:Gardasjøen]]
 [[pl:Garda (jezioro)]]
