--- a/Eric_Leman.mw
+++ b/Eric_Leman.mw
@@ -12,3 +12,7 @@
 
 [[Categorie:West-Vlamsche coureur|Leman, Eric]]
 [[Categorie:Legem|Leman, Eric]]
+
+[[en:Eric Leman]]
+[[fr:Éric Leman]]
+[[nl:Eric Leman]]
