--- a/Medici.mw
+++ b/Medici.mw
@@ -147,6 +147,7 @@ De leedn van de familie Medici oan invloed op de kunst en de architectuur surtou
 [[ja:メディチ家]]
 [[ka:მედიჩი (დინასტია)]]
 [[la:Medices]]
+[[nl:Medici]]
 [[no:Medici]]
 [[pl:Medyceusze]]
 [[pt:Família Médici]]
