--- a/Isoglosse.mw
+++ b/Isoglosse.mw
@@ -29,6 +29,7 @@ Enigste belangryke isoglossn:
 [[it:Isoglossa]]
 [[ja:等語線]]
 [[li:Isoglos]]
+[[nl:Isoglosse]]
 [[no:Isogloss]]
 [[pl:Izoglosa]]
 [[pt:Isoglossa]]
