--- a/Burgemêester.mw
+++ b/Burgemêester.mw
@@ -31,6 +31,7 @@ Een aantal van de burgemêesters van West-Vlamse steedn en gemêentn zin:
 [[lb:Buergermeeschter]]
 [[li:Börgemeister]]
 [[lt:Meras]]
+[[nl:Burgemeester]]
 [[nn:Ordførar]]
 [[no:Ordfører]]
 [[pl:Burmistrz]]
