--- a/Accordeong.mw
+++ b/Accordeong.mw
@@ -36,6 +36,7 @@ In West-Vloandern stond der vroeger en accordeongfabrieke in [[Lichtervelde]]. D
 [[ja:アコーディオン]]
 [[la:Harmonica diductilis]]
 [[lt:Akordeonas]]
+[[nl:Accordeon]]
 [[nn:Trekkspel]]
 [[no:Trekkspill]]
 [[pl:Akordeon]]
