--- a/Leuven.mw
+++ b/Leuven.mw
@@ -29,6 +29,7 @@ Weegns de êeuwnlange anwezigheid van de brouwery Artois en het studentenleevn w
 [[la:Lovanium]]
 [[lb:Léiwen]]
 [[li:Leuve]]
+[[nl:Leuven]]
 [[no:Leuven]]
 [[pl:Leuven]]
 [[pt:Lovaina]]
