--- a/Litchi.mw
+++ b/Litchi.mw
@@ -72,6 +72,7 @@ Image:Litchi root.jpg|'n Kiemnde pitte van ne litchi
 [[ja:レイシ]]
 [[lt:Kininis ličis]]
 [[ms:Pokok Laici]]
+[[nl:Lychee]]
 [[no:Litchi]]
 [[pl:Liczi chińskie]]
 [[pt:Litchi]]
