--- a/Uffizi.mw
+++ b/Uffizi.mw
@@ -22,6 +22,7 @@ Het '''Uffizi''' (''Galleria degli Uffizi'' in het [[Italioans (toale)|Italioans
 [[ja:ウフィツィ美術館]]
 [[ko:우피치 미술관]]
 [[lb:Galleria degli Uffizi]]
+[[nl:Uffizi]]
 [[no:Uffizi]]
 [[pl:Galeria Uffizi]]
 [[pt:Galleria degli Uffizi]]
