--- a/Dendrochronologie.mw
+++ b/Dendrochronologie.mw
@@ -18,6 +18,7 @@ By archeologische voundstn die bestoan uut out — lik middeleeuwsche schilderye
 [[it:Dendrocronologia]]
 [[ja:年輪年代学]]
 [[lt:Dendrochronologija]]
+[[nl:Dendrochronologie]]
 [[nn:Årringsdatering]]
 [[no:Dendrokronologi]]
 [[pl:Dendrochronologia]]
