--- a/Nieuwjoar.mw
+++ b/Nieuwjoar.mw
@@ -19,6 +19,7 @@ Nieuwjoar is een dag woa dan der veel tradities zyn, sommigste ol styf oed, andr
 [[id:Tahun Baru]]
 [[it:Capodanno]]
 [[ja:元日]]
+[[nl:Nieuwjaar]]
 [[nn:Nyttår]]
 [[no:Nyttår]]
 [[pl:Nowy Rok]]
