--- a/100_dagen.mw
+++ b/100_dagen.mw
@@ -10,3 +10,7 @@ Mêestal ôok in de schole,  mo vooral ôok in de uitgaangsstrate van Kortryk (B
 
 [[Categorie:Onderwys]]
 [[Categorie:Folklore]]
+
+[[en:Studniówka]]
+[[nl:Honderd Dagen (school)]]
+[[pl:Studniówka]]
