--- a/Adelheid_Byttebier.mw
+++ b/Adelheid_Byttebier.mw
@@ -18,3 +18,5 @@ In de media es de flamboyante Adelheid vôoral gekend voe euren brêen smile, eu
 
 [[Categorie:Polletieker|Byttebier, Adelheid]]
 [[Categorie:Wevelgem|Byttebier, Adelheid]]
+
+[[nl:Adelheid Byttebier]]
