--- a/Annelies_Cappaert.mw
+++ b/Annelies_Cappaert.mw
@@ -9,3 +9,5 @@ In [[2007]] plann ze under ne êeste single, mo wel ounder de nieuwe noame ''[[A
 
 [[Categorie: West-Vlamsche zanger|Cappaert, Annelies]]
 [[Categorie: Brugge|Cappaert, Annelies]]
+
+[[nl:Annelies Cappaert]]
