--- a/Bert_De_Graeve.mw
+++ b/Bert_De_Graeve.mw
@@ -6,3 +6,5 @@ Bert De Graeve es in [[1980]] ofgestudeerd als [[advocoat]] an de [[UGent]]. Vô
 [[Categorie:TV|De Graeve, Bert]]
 [[Categorie:Economie|De Graeve, Bert]]
 [[Categorie:Oavelgem|De Graeve, Bert]]
+
+[[nl:Bert De Graeve]]
