--- a/Bordeaux.mw
+++ b/Bordeaux.mw
@@ -10,3 +10,68 @@ Sedert een poar joar zyn ze hêle stikken van Bordeaux an 't restaureern wodeure
 
 
 [[Categorie: Stad in Vrankryk]]
+
+[[af:Bordeaux]]
+[[an:Bordeus]]
+[[ar:بوردو]]
+[[ast:Bordeos]]
+[[az:Bordo]]
+[[bar:Bordeaux]]
+[[bg:Бордо]]
+[[br:Bourdel]]
+[[ca:Bordeus]]
+[[ceb:Bordeaux]]
+[[cs:Bordeaux]]
+[[cy:Bordeaux]]
+[[da:Bordeaux (by)]]
+[[de:Bordeaux]]
+[[el:Μπορντό]]
+[[en:Bordeaux]]
+[[eo:Bordeaux]]
+[[es:Burdeos]]
+[[et:Bordeaux]]
+[[eu:Bordele]]
+[[fa:بردو]]
+[[fi:Bordeaux]]
+[[fr:Bordeaux]]
+[[frp:Bordôx]]
+[[ga:Bordeaux]]
+[[gl:Bordeos - Bordeaux]]
+[[he:בורדו]]
+[[hi:बोर्दो]]
+[[hr:Bordeaux]]
+[[hu:Bordeaux]]
+[[id:Bordeaux]]
+[[io:Bordeaux]]
+[[is:Bordeaux]]
+[[it:Bordeaux]]
+[[ja:ボルドー]]
+[[ka:ბორდო]]
+[[ko:보르도]]
+[[la:Burdigala]]
+[[lad:Bordeaux]]
+[[lb:Bordeaux (Stad)]]
+[[lt:Bordo]]
+[[lv:Bordo]]
+[[nl:Bordeaux (stad)]]
+[[nn:Bordeaux]]
+[[no:Bordeaux]]
+[[oc:Bordèu]]
+[[pl:Bordeaux]]
+[[pms:Bordò]]
+[[pt:Bordéus]]
+[[qu:Bordeaux]]
+[[ro:Bordeaux]]
+[[ru:Бордо]]
+[[simple:Bordeaux]]
+[[sk:Bordeaux]]
+[[sl:Bordeaux]]
+[[sq:Bordeaux]]
+[[sr:Бордо]]
+[[sv:Bordeaux]]
+[[th:บอร์โดซ์]]
+[[uk:Бордо]]
+[[vec:Bordò]]
+[[vi:Bordeaux]]
+[[vo:Bordeaux]]
+[[zh:波尔多]]
