+ en: fr: it: nl:

--- a/Camping_Cosmos.mw
+++ b/Camping_Cosmos.mw
@@ -15,3 +15,8 @@ Achter e hêle historie met den vroegern eigenoare Gerard Velle eit de camping i
 *[http://www.transatlanticfilms.be De productiemoatschappy]
 
 [[Categorie:Middelkerke]]
+
+[[en:Camping Cosmos]]
+[[fr:Camping Cosmos]]
+[[it:Camping Cosmos]]
+[[nl:Camping Cosmos]]
