--- a/Catherine_Verfaillie.mw
+++ b/Catherine_Verfaillie.mw
@@ -30,3 +30,5 @@ In 't vôorjoar van 2007 is êen van eur ounderzoek'n en de conclusies omtrent '
 
 [[Categorie:Weetnschapper|V]]
 [[Categorie:Yper|V]]
+
+[[nl:Catherine Verfaillie]]
