--- a/Chimay.mw
+++ b/Chimay.mw
@@ -2,3 +2,5 @@
 * e stad in [[Enegouwn]], zie: [[Chimay (stad)|Chimay]]
 * e trappistnbier dat er gebrouw is, zie: [[Chimay (trappist)]]
 {{db}}
+
+[[nl:Chimay]]
