--- a/Chimay_(trappist).mw
+++ b/Chimay_(trappist).mw
@@ -21,4 +21,9 @@
 [[Categorie:Brouwer]]
 [[Categorie:Bier]]
 
+[[de:Chimay (Bier)]]
+[[en:Chimay Brewery]]
+[[es:Fromage de Trappiste]]
+[[fr:Chimay (bière)]]
 [[nl:Chimay (bier)]]
+[[sv:Bières de Chimay]]
