--- a/Concertina.mw
+++ b/Concertina.mw
@@ -22,3 +22,19 @@ Da woarn wisseltônige, diatonische concertina's die in Iengeland gebouwd zyn. Z
 
 
 [[Categorie:Muziekinstrument]]
+
+[[cs:Koncertina]]
+[[da:Concertina]]
+[[de:Konzertina]]
+[[en:Concertina]]
+[[es:Concertina]]
+[[fi:Concertina]]
+[[fr:Concertina]]
+[[he:מפוחית יד]]
+[[it:Concertina]]
+[[ja:コンサーティーナ]]
+[[nl:Concertina]]
+[[nn:Concertina]]
+[[pl:Concertina]]
+[[ru:Концертина]]
+[[sv:Concertina]]
