--- a/Dwars_door_Vlaanderen.mw
+++ b/Dwars_door_Vlaanderen.mw
@@ -20,3 +20,10 @@
 
 [[Category: West-Vlamsche wielerkoers]]
 [[Category: Woaregem]]
+
+[[de:Quer durch Flandern]]
+[[en:Dwars door Vlaanderen]]
+[[fr:À travers les Flandres]]
+[[it:Dwars door Vlaanderen]]
+[[lb:Dwars door Vlaanderen]]
+[[nl:Dwars door Vlaanderen]]
