--- a/Elisa_Waut.mw
+++ b/Elisa_Waut.mw
@@ -26,3 +26,5 @@ De group es begonn toen da de broere en zuster Hans en Els Helewaut tôopegingn 
 
 [[Categorie: West-Vlamsche groep]]
 [[Categorie:Brugge]]
+
+[[nl:Elisa Waut]]
