--- a/Ex-drummer_(film).mw
+++ b/Ex-drummer_(film).mw
@@ -11,3 +11,5 @@ Voo de filmmuziek wos't er nen grôotn West-Vlamschn inbrieng: [[Flip Kowlier]] 
 * {{imdb title|id=0812243|title=Ex-drummer}}
 
 [[Categorie:Film]]
+
+[[nl:Ex Drummer]]
