--- a/FC_De_Kampioenen.mw
+++ b/FC_De_Kampioenen.mw
@@ -15,3 +15,6 @@
 *[http://www.een.be/fcdekampioenen/ Officieeln website]
 
 [[Categorie:TV-serie]]
+
+[[en:F.C. De Kampioenen]]
+[[nl:F.C. De Kampioenen (televisie)]]
