--- a/Filips_I.mw
+++ b/Filips_I.mw
@@ -4,3 +4,7 @@
 *[[Filips I van Kastilië]], bygenoamd '''Filips den Schoonn''', ertog van Bourgondië (1482-1506) en keunienk van Spanje
  
 {{db}}
+
+[[en:Felipe I]]
+[[es:Felipe I]]
+[[nl:Filips I]]
