--- a/Filips_II.mw
+++ b/Filips_II.mw
@@ -4,3 +4,20 @@
 *[[Filips II van Spanje]], keunienk van Spanje (1556-1598)
  
 {{db}}
+
+[[ast:Felipe II]]
+[[bg:Филип II]]
+[[ca:Felip II]]
+[[cs:Filip II.]]
+[[de:Liste der Herrscher namens Philipp#Philipp_II.]]
+[[en:Philip II]]
+[[eo:Filipo la 2-a]]
+[[es:Felipe II]]
+[[fi:Filip II]]
+[[fr:Philippe II]]
+[[he:פיליפ השני]]
+[[hu:II. Fülöp]]
+[[ja:フィリップ2世]]
+[[nl:Filips II]]
+[[pl:Filip II]]
+[[sh:Filip II]]
