--- a/Filips_III.mw
+++ b/Filips_III.mw
@@ -4,3 +4,16 @@
 *[[Filips III van Spanje]], keunienk van Spanje (1598-1621)
  
 {{db}}
+
+[[ca:Felip III]]
+[[cs:Filip III.]]
+[[en:Philip III]]
+[[eo:Filipo la 3-a]]
+[[es:Felipe III]]
+[[fi:Filip III]]
+[[fr:Philippe III]]
+[[it:Filippo III]]
+[[la:Philippus III]]
+[[nl:Filips III]]
+[[pl:Filip III]]
+[[zh:腓力三世]]
