--- a/Filips_IV.mw
+++ b/Filips_IV.mw
@@ -4,3 +4,14 @@
 *[[Filips IV van Spanje]], keunienk van Spanje (1621-1665)
  
 {{db}}
+
+[[en:Philip IV]]
+[[eo:Filipo la 4-a]]
+[[es:Felipe IV]]
+[[fi:Filip IV]]
+[[fr:Philippe IV]]
+[[it:Filippo IV]]
+[[nl:Filips IV]]
+[[pl:Filip IV]]
+[[sk:Filip IV.]]
+[[sv:Filip IV]]
