--- a/Filips_V.mw
+++ b/Filips_V.mw
@@ -4,3 +4,14 @@
 *[[Filips V van Spanje]], keunienk van Spanje (1713-1746)
  
 {{db}}
+
+[[ar:فيليب الخامس]]
+[[cs:Filip V.]]
+[[en:Philip V]]
+[[es:Felipe V]]
+[[fi:Filip V]]
+[[fr:Philippe V]]
+[[nl:Filips V]]
+[[pl:Filip V]]
+[[ru:Филипп V]]
+[[zh:腓力五世]]
