--- a/Floris_ende_Blancefloer.mw
+++ b/Floris_ende_Blancefloer.mw
@@ -47,3 +47,5 @@ E viendt neur were in Babylon, woa da ze upeslootn zit in e torre die van en emi
 *[http://www.dbnl.org/tekst/asse008flor01/asse008flor01_001.htm De hêle tekste van Floris ende Blancefloer]
 
 [[Category: Middelnederlandsche literatuur]]
+
+[[nl:Floris ende Blancefloer]]
