--- a/Francky_Dury.mw
+++ b/Francky_Dury.mw
@@ -8,3 +8,6 @@ Francky Dury es begonn'n als voetboller ip een êerder bescheid'n niveau by [[Hu
 *Begun [[2007]] es't ie verkoozn tot [[West-Vloamieng van het joar]]. 
 
 [[Categorie:West-Vlamsche voetboltrainer]]
+
+[[en:Francky Dury]]
+[[nl:Francky Dury]]
