--- a/Frank_Vandenbroucke.mw
+++ b/Frank_Vandenbroucke.mw
@@ -2,3 +2,7 @@
 * nen West-Vlamschn coureur, kykt by [[Frank Vandenbroucke (coureur)]]
 * nen Vlamsche polletieker, kykt by [[Frank Vandenbroucke (polletieker)]]
 {{db}}
+
+[[en:Frank Vandenbroucke]]
+[[fr:Frank Vandenbroucke]]
+[[nl:Frank Vandenbroucke]]
