--- a/Gili.mw
+++ b/Gili.mw
@@ -13,3 +13,5 @@ Dat is zyn eigen cafeetje me 'n podiumtje, 't ligt in Stoasegem, een dêelgemêe
 * [http://http://users.pandora.be/lieven.gheysen/truuknl.html  De Trukendoos]
 
 [[Categorie: Kluchtigoard|Gili]]
+
+[[nl:Gili (goochelaar)]]
