--- a/Glycine.mw
+++ b/Glycine.mw
@@ -22,3 +22,35 @@ Leucine weirdt gecodeerd deur de [[codon]]s GGU, GGC, GGA en GGG.
 {{Aminozuurn}}
 
 [[Categorie:Moleculaire biologie]]
+
+[[bn:গ্লাইসিন]]
+[[ca:Glicina]]
+[[cs:Glycin]]
+[[da:Glycin]]
+[[de:Glycin]]
+[[en:Glycine]]
+[[eo:Glicino]]
+[[es:Glicina]]
+[[fi:Glysiini]]
+[[fr:Glycine (acide aminé)]]
+[[he:גליצין]]
+[[hr:Glicin]]
+[[hu:Glicin]]
+[[id:Glisin]]
+[[it:Glicina]]
+[[ja:グリシン]]
+[[ko:글리신]]
+[[lb:Glycin]]
+[[lt:Glicinas]]
+[[lv:Glicīns]]
+[[nl:Glycine (aminozuur)]]
+[[no:Glycin]]
+[[pl:Glicyna]]
+[[pt:Glicina]]
+[[ru:Глицин]]
+[[sr:Глицин]]
+[[su:Glisin]]
+[[sv:Glycin]]
+[[tr:Glisin]]
+[[uk:Гліцин]]
+[[zh:甘氨酸]]
