--- a/Isoleucine.mw
+++ b/Isoleucine.mw
@@ -19,5 +19,28 @@ Leucine weirdt gecodeerd deur de [[codon]]s AUU, AUC and AUA.
 
 [[Categorie:Moleculaire biologie]]
 
-[[nl:Isoleucine]]
+[[ca:Isoleucina]]
+[[da:Isoleucin]]
+[[de:Isoleucin]]
 [[en:Isoleucine]]
+[[eo:Izoleŭcino]]
+[[es:Isoleucina]]
+[[fi:Isoleusiini]]
+[[fr:Isoleucine]]
+[[he:איזולאוצין]]
+[[hr:Izoleucin]]
+[[id:Isoleusin]]
+[[it:Isoleucina]]
+[[ja:イソロイシン]]
+[[ko:이소류신]]
+[[lb:Isoleucin]]
+[[lt:Izoleucinas]]
+[[lv:Izoleicīns]]
+[[nl:Isoleucine]]
+[[pl:Izoleucyna]]
+[[pt:Isoleucina]]
+[[ru:Изолейцин]]
+[[sv:Isoleucin]]
+[[tr:İzolösin]]
+[[uk:Ізолейцин]]
+[[zh:異亮氨酸]]
