--- a/Leucine.mw
+++ b/Leucine.mw
@@ -19,5 +19,30 @@ Leucine weirdt gecodeerd deur de [[codon]]s UUA, UUG, CUU, CUC, CUA, en CUG.
 
 [[Categorie:Moleculaire biologie]]
 
-[[nl:Leucine]]
+[[ca:Leucina]]
+[[da:Leucin]]
+[[de:Leucin]]
 [[en:Leucine]]
+[[eo:Leŭcino]]
+[[es:Leucina]]
+[[fi:Leusiini]]
+[[fr:Leucine]]
+[[he:לאוצין]]
+[[hr:Leucin]]
+[[id:Leusin]]
+[[it:Leucina]]
+[[ja:ロイシン]]
+[[ko:류신]]
+[[lb:Leucin]]
+[[lt:Leucinas]]
+[[lv:Leicīns]]
+[[nl:Leucine]]
+[[no:Leucin]]
+[[pl:Leucyna]]
+[[pt:Leucina]]
+[[ru:Лейцин]]
+[[sv:Leucin]]
+[[tr:Lösin]]
+[[uk:Лейцин]]
+[[vls;Leucine]]
+[[zh:亮氨酸]]
