--- a/Valine.mw
+++ b/Valine.mw
@@ -19,5 +19,30 @@ Valine weirdt gecodeerd deur de [[codon]]s GUU, GUC, GUG en GUA.
 
 [[Categorie:Moleculaire biologie]]
 
-[[nl:Valine]]
+[[ca:Valina]]
+[[cs:Valin]]
+[[da:Valin]]
+[[de:Valin]]
 [[en:Valine]]
+[[eo:Valino]]
+[[es:Valina]]
+[[fi:Valiini]]
+[[fr:Valine]]
+[[he:ולין]]
+[[hr:Valin]]
+[[id:Valin]]
+[[it:Valina]]
+[[ja:バリン]]
+[[ko:발린]]
+[[lb:Valin]]
+[[lt:Valinas]]
+[[lv:Valīns]]
+[[nl:Valine]]
+[[pl:Walina]]
+[[pt:Valina]]
+[[ro:Valină]]
+[[ru:Валин]]
+[[sv:Valin]]
+[[tr:Valin]]
+[[uk:Валін]]
+[[zh:缬氨酸]]
