--- a/Gouden_Boomstoet.mw
+++ b/Gouden_Boomstoet.mw
@@ -11,3 +11,5 @@ In [[2007]] is 't er ôok 'n “vôorprogramma”: 'n toer met de velo via zes p
 [[Categorie:Middelêeuwen]]
 [[Categorie:Brugge]]
 [[Categorie:Folklore]]
+
+[[nl:Gouden Boomstoet]]
