--- a/Grensovergang.mw
+++ b/Grensovergang.mw
@@ -9,3 +9,17 @@ Image:Grensovergang Menen.jpg|<center>De grensovergang by Meende
 </gallery>
 
 [[Categorie: Verkêer]]
+
+[[an:Muga]]
+[[de:Grenze]]
+[[en:Border]]
+[[es:Frontera]]
+[[fr:Frontière]]
+[[he:גבול]]
+[[it:Frontiera]]
+[[ja:国境]]
+[[ko:국경]]
+[[nl:Grens]]
+[[pl:Granica państwowa]]
+[[ro:Graniţă]]
+[[ru:Государственная граница]]
