--- a/Hafabra.mw
+++ b/Hafabra.mw
@@ -18,3 +18,6 @@ Vor e bitje geld binn te bringn geevn de mêeste verênigingn ôok e joarliks le
 [http://www.fedekam.com Fedekam]
 
 [[Categorie:Muziekverenigienge]]
+
+[[fy:HaFaBra]]
+[[nl:HaFaBra]]
