--- a/Lyste_van_West-Vlamsche_hafabra.mw
+++ b/Lyste_van_West-Vlamsche_hafabra.mw
@@ -1,5 +1,5 @@
 ==Armoniejn==
-{| {{prettytable}} 
+{| {{prettytable}} width="100%"
 |- {{highlight1}}
 ! Gemêente
 ! Noame
@@ -9,37 +9,37 @@
 |- 
 | [[Beseloare]] || Koninklijke harmonie St.-Cecilia Beselare || || ||
 |-
-| [[Brugge]] || Koninklijke harmonie St.-Leo|| || ||  ||
+| [[Brugge]] || Koninklijke harmonie St.-Leo || || ||
 |-
-| [[Brugge]] || Koninklijke Speelschaar SFX ("de Frères") || 1950 ||  ||
+| [[Brugge]] || Koninklijke Speelschaar SFX ("de Frères") || 1950 || ||
 |-
-| [[Brugge]] || Socialistische harmonie Werkerswelzijn || 1920 ||  ||
+| [[Brugge]] || Socialistische harmonie Werkerswelzijn || 1920 || ||
 |-
-| [[Deisel]] || Koninklijke fanfare De Ridderjanszonen || 1926 ||  ||
+| [[Deisel]] || Koninklijke fanfare De Ridderjanszonen || 1926 || ||
 |-
 | [[Dikkebus]] || Koninklijke harmonie De Vijverzonen Dikkebus || 1925 || || Fanfare toet 2000
 |-
-| [[Dizzêle]] || Koninklijke Harmonie Poldergalm || 1877 ||  ||
+| [[Dizzêle]] || Koninklijke Harmonie Poldergalm || 1877 || ||
 |-
 | [[Gistel]] || Koninklijke harmonie Eendracht en kunstliefde || || ||
 |-
 | [[Gistel]] || Young silver band || 1989 || ||
 |-
-| [[Kôolkerke]] || Koninklijke Harmonie Vermaak na Arbeid || 1955 ||
+| [[Kôolkerke]] || Koninklijke Harmonie Vermaak na Arbeid || 1955 || ||
 |-
-| [[Legem]] || Koninklijke harmonie St-Cecilia || 1804? ||  ||
+| [[Legem]] || Koninklijke harmonie St-Cecilia || 1804? || ||
 |-
-| [[Môoslee]] || Koninklijke harmonie St-Cecilia Slyps || 1945 ||  ||
+| [[Môoslee]] || Koninklijke harmonie St-Cecilia Slyps || 1945 || ||
 |-
-| [[Môoslee]] || Koninklijke harmonie De Verenigde Vrienden || 1825 ||  ||
+| [[Môoslee]] || Koninklijke harmonie De Verenigde Vrienden || 1825 || ||
 |-
-| [[Oarelbeke]] || Koninklijk Harmonieorkest Vooruit || ±1920 ||  ||
+| [[Oarelbeke]] || Koninklijk Harmonieorkest Vooruit || ±1920 || ||
 |-
 | [[Oedeburg]]  || Koninklijke harmonie St.-Cecilia Oudenburg || 20 december 1954 || ||
 |-
-| [[Oelem]] || Koninklijke harmonie Sint-Cecilia Oedelem || 1839 ||  ||
+| [[Oelem]] || Koninklijke harmonie Sint-Cecilia Oedelem || 1839 || ||
 |-
-| [[Wienkel]] || Koninklijke harmonie De Kunstvrienden || 1947 ||  ||
+| [[Wienkel]] || Koninklijke harmonie De Kunstvrienden || 1947 || ||
 |-
 | [[Yper]]      || Koninklijke harmonie Ypriana || 17 juni 1920 || ||
 |-
@@ -49,7 +49,7 @@
 |}
 
 ==Fanfares==
-{| {{prettytable}} 
+{| {{prettytable}} width="100%"
 |- {{highlight1}}
 ! Gemêente
 ! Noame
@@ -70,7 +70,7 @@
 | [[Zunnebeke]] || Koninklijke fanfare St.-Cecilia Zonnebeke || || ||
 |}
 ==Brassbands==
-{| {{prettytable}} 
+{| {{prettytable}} width="100%"
 |- {{highlight1}}
 ! Gemêente
 ! Noame
@@ -85,7 +85,7 @@
 |}
 
 ==Specioale gevolln==
-{| {{prettytable}} 
+{| {{prettytable}} width="100%"
 |- {{highlight1}}
 ! Gemêente
 ! Noame
@@ -93,7 +93,7 @@
 ! Doatum van stopzettinge
 ! Upmerkiengn
 |- 
-| [[Kuurne]] || Fanfare "De letter Geletterden" || ±1980 ||  || Stroat- en gelegeneidsfanfoare ||
+| [[Kuurne]] || Fanfare "De letter Geletterden" || ±1980 ||  || Stroat- en gelegeneidsfanfoare 
 |}
 
 ==Koppeliengn==
