--- a/Harmonium.mw
+++ b/Harmonium.mw
@@ -11,3 +11,23 @@ Deur verschillige combinoaties te moakn, kuj ezo verschillige registers moakn.
 De noame harmonium wierd vo den êeste kêer gebrukt in [[Vrankryk]] deur Alexandre Debain. Em wos den êestn voun zuk en instrument te bouwn da gebruk makte va drukwind, da wil zeggn daj de lucht nor de toungsjes bloast. Up min of mêer 't zelste moment wos der wok nen [[USA|Amerikoan]] die a peu près 't zelste gemakt adde, mo tonne mi zuugwiend die zorgde vo nen ounderdruk. Omdat da simpelder wos vo te moakn, wos de Amerikoansche versie rap populairder dan de Fransche. Harmoniums wierdn surtout populair in kerkn vo zang te begeleidn.
 
 [[Categorie:Muziekinstrument]]
+
+[[bg:Хармониум]]
+[[bn:হারমোনিয়াম]]
+[[da:Harmonium]]
+[[de:Harmonium]]
+[[el:Αρμόνιο]]
+[[en:Harmonium]]
+[[eo:Harmoniumo]]
+[[es:Armonio]]
+[[fi:Harmoni]]
+[[fr:Harmonium]]
+[[he:הרמוניום]]
+[[it:Harmonium]]
+[[nl:Harmonium]]
+[[no:Tråorgel]]
+[[pl:Fisharmonia]]
+[[pt:Harmônio]]
+[[ru:Фисгармония]]
+[[sv:Harmonium]]
+[[uk:Фісгармонія]]
