--- a/Het_Zesde_Metaal.mw
+++ b/Het_Zesde_Metaal.mw
@@ -13,3 +13,5 @@ Ol de leedn dèjn in 't zesde middelboar Latyn, moa ''Zesde Metaal'' voengn ze g
 == Externe koppelienge ==
 * [http://www.HetZesdeMetaal.be Officieeln website]
 [[Categorie:West-Vlamsche groep]]
+
+[[nl:Het Zesde Metaal]]
