--- a/Hilde_Crevits.mw
+++ b/Hilde_Crevits.mw
@@ -10,3 +10,7 @@ In [[1999]] es eur polletieke carrière begonn, als [[provincieroadslid]] voo We
 
 [[Categorie:West-Vlamsche polletieker|Crevits Hilde]]
 [[Categorie:Toeroet|Crevits Hilde]]
+
+[[en:Hilde Crevits]]
+[[fr:Hilde Crevits]]
+[[nl:Hilde Crevits]]
