--- a/Hommelbier.mw
+++ b/Hommelbier.mw
@@ -17,3 +17,5 @@ In Hommelbier zittn d'r drie sôortn Poperiengschn [[ommel]]. 't Bier ed e fyn a
 [[Categorie:Brouwer]]
 [[Categorie:Bier]]
 [[Categorie:Drank]]
+
+[[nl:Hommelbier]]
