--- a/In_Flanders_Fields.mw
+++ b/In_Flanders_Fields.mw
@@ -4,3 +4,5 @@
 *een museum in [[Yper]] over [[WO1]], zie: [[In Flanders Fields (museum)]]
 
 {{db}}
+
+[[nl:In Flanders Fields (doorverwijspagina)]]
