--- a/Indo-Europees.mw
+++ b/Indo-Europees.mw
@@ -37,3 +37,88 @@ Indo-Germaans is en oude benoamienge voen Indo-Europees, mor omda 't igentlik e 
 
 [[Category: Indo-Europeesche toale]]
 [[Categorie:Toalkunde]]
+
+[[af:Indo-Europese tale]]
+[[als:Indogermanische Sprachfamilie]]
+[[an:Luengas indo-europeyas]]
+[[ang:Indo-Europisc sprǣchīred]]
+[[ar:لغات هندوأوروبية]]
+[[ast:Llingües indoeuropees]]
+[[az:Hind–Avropa dil ailəsi]]
+[[be-x-old:Індаэўрапейскія мовы]]
+[[bg:Индоевропейски езици]]
+[[bn:ইন্দো-ইউরোপীয় ভাষা-পরিবার]]
+[[br:Yezhoù indezeuropek]]
+[[bs:Indoevropski jezici]]
+[[ca:Llengües indoeuropees]]
+[[cs:Indoevropské jazyky]]
+[[cv:Инди-европа чĕлхисем]]
+[[cy:Ieithoedd Indo-Ewropeaidd]]
+[[da:Indoeuropæiske sprog]]
+[[de:Indogermanische Sprachen]]
+[[diq:Zıwanê Hind-Ewropa]]
+[[el:Ινδοευρωπαϊκές γλώσσες]]
+[[en:Indo-European languages]]
+[[eo:Hindeŭropa lingvaro]]
+[[es:Lenguas indoeuropeas]]
+[[et:Indoeuroopa keeled]]
+[[eu:Indoeuropar hizkuntzak]]
+[[fa:زبان‌های هندواروپایی]]
+[[fi:Indoeurooppalaiset kielet]]
+[[fo:Indo-evropeisk mál]]
+[[fr:Langues indo-européennes]]
+[[fy:Yndo-Jeropeeske talen]]
+[[ga:Teangacha Ind-Eorpacha]]
+[[gl:Linguas indoeuropeas]]
+[[he:שפות הודו-אירופיות]]
+[[hi:हिन्द-यूरोपीय भाषा-परिवार]]
+[[hr:Indoeuropska jezična porodica]]
+[[hsb:Indoeuropske rěče]]
+[[hu:Indoeurópai nyelvcsalád]]
+[[ia:Lingua indoeuropee]]
+[[id:Bahasa Indo-Eropa]]
+[[io:Indo-Europana linguaro]]
+[[it:Lingue indoeuropee]]
+[[ja:インド・ヨーロッパ語族]]
+[[jbo:xinjoiro'o bangu]]
+[[ka:ინდოევროპული ენები]]
+[[kn:ಇಂಡೋ-ಯುರೋಪಿಯನ್ ಭಾಷೆಗಳು]]
+[[ko:인도유럽어족]]
+[[ku:Zimanmalbata hind û ewropî]]
+[[kw:Yethow Eyndo-Europek]]
+[[la:Linguae Indoeuropaeae]]
+[[li:Indogermaanse taole]]
+[[lij:Lengue indoeuropee]]
+[[lt:Indoeuropiečių kalbos]]
+[[lv:Indoeiropiešu valodas]]
+[[mk:Индоевропски јазици]]
+[[ms:Bahasa-bahasa Indo-Eropah]]
+[[nds:Indoeuropääsche Spraken]]
+[[nl:Indo-Europese talen]]
+[[nn:Liste over indoeuropeiske språk]]
+[[no:Indoeuropeiske språk]]
+[[oc:Indoeuropèu]]
+[[os:Индоевропаг æвзæгтæ]]
+[[pl:Języki indoeuropejskie]]
+[[pt:Línguas indo-européias]]
+[[rmy:Indo-Europikane chhiba]]
+[[ro:Limbile indo-europene]]
+[[ru:Индоевропейские языки]]
+[[se:Indoeurohpálaš gielat]]
+[[sh:Indoevropski jezici]]
+[[simple:Indo-European languages]]
+[[sk:Indoeurópske jazyky]]
+[[sl:Indoevropski jeziki]]
+[[sq:Gjuhët indo-evropiane]]
+[[sr:Индоевропски језици]]
+[[sv:Indoeuropeiska språk]]
+[[sw:Lugha za Kihindi-Kiulaya]]
+[[ta:இந்திய-ஐரோப்பிய மொழிகள்]]
+[[tg:Забонҳои Ҳинду-Аврупоӣ]]
+[[th:ตระกูลภาษาอินโด-ยูโรเปียน]]
+[[tpi:Indo-Yuropien famili bilong tokples]]
+[[tr:Hint-Avrupa dil ailesi]]
+[[uk:Індоєвропейські мови]]
+[[ur:انڈو یورپین زبانیں]]
+[[vi:Hệ ngôn ngữ Ấn-Âu]]
+[[zh:印欧语系]]
