--- a/Irma_Laplasse.mw
+++ b/Irma_Laplasse.mw
@@ -12,3 +12,5 @@ In 1994 en ze 't proces, achter joarn van protest, nog e ki overedoan. Toet grô
 
 
 [[Categorie: Nieuwstn tyd]]
+
+[[nl:Irma Laplasse]]
