--- a/Isabella_van_Portugal.mw
+++ b/Isabella_van_Portugal.mw
@@ -5,3 +5,11 @@
 *[[Isabella van Portugal (1503-1539)]], dochter van Emanuel I van Portugal en [[Maria van Aragón]], vrouwe van [[Karel V van et Illig Roomsche Ryk|Karel V]] 
  
 {{db}}
+
+[[ca:Isabel de Portugal]]
+[[de:Isabella von Portugal]]
+[[en:Isabel of Portugal (disambiguation)]]
+[[es:Isabel de Portugal (desambiguación)]]
+[[fr:Isabelle de Portugal]]
+[[nl:Isabella van Portugal]]
+[[pt:Isabel de Portugal]]
