--- a/Jean-Pierre_Coopman.mw
+++ b/Jean-Pierre_Coopman.mw
@@ -29,3 +29,5 @@ E makt nu schilderyen en têkeniengn va boksers e kampn. Iddern dag stoat 'n nog
 <references />
 
 [[Categorie:West-Vlamsche bokser|Coopman, Jean-Pierre]]
+
+[[nl:Jean-Pierre Coopman]]
