--- a/Jef_Braeckevelt.mw
+++ b/Jef_Braeckevelt.mw
@@ -8,3 +8,5 @@ Oloewel dat ie by de jeugd soms meedeed an kermiskoersn, es't ie redelik rap plo
 * Braeckevelt kwam bekend by 't grôot publiek in 2001. Toen woun ze coureur Serge Baguet een etappe in de Rounde van Vrankryk. An d'ankomste vieln ze ol kriesjend in makoars armes.  
 
 [[Categorie:West-Vlamsche ploegleider]]
+
+[[nl:Jef Braeckevelt]]
