--- a/Jimmy_Frey.mw
+++ b/Jimmy_Frey.mw
@@ -20,3 +20,5 @@ Jimmy Frey es 3 joar uit roelatie gewist, totdat ie in [[1992]] were begoste ip 
 *[http://users.pandora.be/jimmyfrey/ Officieeln website]
 
 [[Categorie:West-Vlamsche zanger|Frey, Jimmy]]
+
+[[nl:Jimmy Frey]]
