+ en: fr: nl: pl:

--- a/Johan_Vande_Lanotte.mw
+++ b/Johan_Vande_Lanotte.mw
@@ -14,3 +14,8 @@
 
 [[Categorie:West-Vlamsche polletieker|Vande Lanotte, Johan]]
 [[Categorie:Ostende|Vande Lanotte, Johan]]
+
+[[en:Johan Vande Lanotte]]
+[[fr:Johan Vande Lanotte]]
+[[nl:Johan Vande Lanotte]]
+[[pl:Johan Vande Lanotte]]
