--- a/Jozef_Verhaeghe_(1919).mw
+++ b/Jozef_Verhaeghe_(1919).mw
@@ -11,4 +11,4 @@ J'ès begroavn in Bissegem woa dat er ôok en stroate noar em genoemd ès.
 [[Categorie:Iengelmunstr|Verhaeghe, Jozef]]
 [[Categorie:Kuurne|Jozef Verhaeghe]]
 
-[[nl:Verhaeghe, Jozef]]
+[[nl:Jozef Verhaeghe]]
