--- a/Sprienkoander.mw
+++ b/Sprienkoander.mw
@@ -3,24 +3,44 @@
 |rijk=[[Animalia]]
 |ounderrijk = [[Hexapoda]] (Zespotigen)
 |stam=[[Arthropoda]] (Geleedpotigen)
-|klasse=[[Insecta]] (Insect'n)
-|ounderklasse=[[Pterygota]] (Gevleugelde insect'n)
+|klasse=[[Insecta]] (Insectn)
+|ounderklasse=[[Pterygota]] (Gevleugelde insectn)
 |orde=[[Orthoptera]] (Sprienkoanders en krekels)
 |familie=[[Acrididae]] (Sprienkoanders)
 |auteur familie=[[MacLeay]]
 |datum familie=1819
 }}
-'''Sprienkoanders''' of '''geswuppers''' zyn e sôorte van insektn die in bykan hêel de weireld vôornkomn, 't zyn apeuprès 20 000 sôortn ekend, mo 't zyn der verzeker nog vele mêer. D'echte sprienkoanders eetn ollêne plantn, mo van krekels en soabelsprienkoanders (die styf verwant zyn) eetn der sommigte oek vlêes. 
+'''Sprienkoanders''' of '''geswuppers''' zyn e sôorte van insectn die in bykan hêel de weireld vôornkomn, 't zyn a peu près 20 000 sôortn ekend, mo 't zyn der verzeker nog vele mêer. D'echte sprienkoanders eetn ollêne plantn, mo van krekels en soabelsprienkoanders (die styf verwant zyn) eetn der sommigte oek vlêes. 
 
 ==Uutzicht==
-'t Zyn bêest'n woavan dat 'n kop vavôorn plat is en z'en grôot' achterpôotn woamei dan ze verre kunn spriengn. Deur dan ze nunder vlerk'n over makoar en over nunder pôot'n wryvn, kunn ze leevn moak'n (strieduloasje). Setoe in de zommer ku j' dadde vele ôorn in [[ges]]kant'n.
+'t Zyn bêestn woavan dat 'n kop vavôorn plat is en z'en grôot' achterpôotn woamei dan ze verre kunn spriengn. Deur dan ze nunder vlerkn over makoar en over nunder pôotn wryvn, kunn ze leevn moakn (striduloasje). Surtout in de zommer ku j' dadde vele ôorn in [[ges]]kantn.
 
 ==Leevn==
-Sprienkoanders legn eiers in de ground, die toene uutkomn en nog nie up grôte bêestn trekkn. 't I mor achter en ende dan ze echt up sprienkoanders begunn trekkn. Beisn nunder leevn zyn ze setoe bezig met eetn, de sôortn oel ier mêestol van olle sôortn ges.
+Sprienkoanders legn eiers in de ground, die toene uutkomn en nog nie up grôte bêestn trekkn. 't I mor achter en ende dan ze echt up sprienkoanders begunn trekkn. Beisn nunder leevn zyn ze surtout bezig met eetn, de sôortn oel ier mêestol van olle sôortn ges.
 
 ==Ploage==
-Oel ier gebeurt dadde nie, mor in Afrika geregeld: hêel oopn sprienkoanders vliegn en landn oltemets up e stik, dan ze toene hêlegans kort frettn, e rampe vaneigens voe de platselyke boern. Dat moet ol e hêel ende gebeurn, want 't stoat oundermêer beschreevn in 'n [[Bybel]], 't wo doar 1 van de Ploagn van Egypte.
+Oel ier gebeurt dadde nie, mor in Afrika geregeld: hêel oopn sprienkoanders vliegn en landn oltemets up e stik, dan ze toene hêlegans kort frettn, e rampe vaneigens voe de platselike boern. Dat moet ol e hêel ende gebeurn, want 't stoat oundermêer beschreevn in 'n [[Bybel]], 't wo doar 1 van de ''Ploagn van Egypte''.
 
-Oendertusschn probeern ze zukke zwermn te voorspelln me satellietbeeldn.
+Oundertusschn probeern ze zukke zwermn te voorspelln me satellietbeeldn.
 
 [[Categorie: Insecte]]
+
+[[af:Sprinkaan]]
+[[de:Heuschrecke]]
+[[en:Grasshopper]]
+[[es:Caelifera]]
+[[fr:Sauteriau]]
+[[he:חרגוליים]]
+[[io:Lokusto]]
+[[it:Caelifera]]
+[[ja:バッタ]]
+[[nl:Sprinkhaan]]
+[[no:Gresshopper]]
+[[pl:Krótkoczułkowe]]
+[[pt:Gafanhoto]]
+[[ru:Саранчи]]
+[[sr:скакавац]]
+[[su:Simeut]]
+[[sw:Panzi]]
+[[tg:Малах]]
+[[tr:Çekirge]]
