--- a/Stijn_Devolder.mw
+++ b/Stijn_Devolder.mw
@@ -45,5 +45,6 @@ In [[2004]] eit ie zyn êeste overwinnienge gehoald by de profs: ne rit in de Vi
 [[en:Stijn Devolder]]
 [[fi:Stijn Devolder]]
 [[fr:Stijn Devolder]]
+[[ja:ステイン・デヴォルデル]]
 [[nl:Stijn Devolder]]
 [[no:Stijn Devolder]]
