--- a/Fort_Napoleon.mw
+++ b/Fort_Napoleon.mw
@@ -7,7 +7,7 @@ Het '''Fort Napoleon''' es een istorisch fort in [[Ostende (stad)|Ostende]]. 't 
 't Fort is gebouwd volgens e vuufhoekig grondplan, me de punt no de zèè.
 
 ==Geschiedenisse==
-In [[1810]] zyn ze begost met de bouw van het ''Fort Impérial'' , en vier joar loater was't kloar. Mo ton was 't al nie mi nodig, omda de [[Vrankryk|Fransche]] under ondertussn teruggetrokkn aan. Ip [[26 juni]] wierd beslist in de [[Conventie va Lon'n|Convensje van Lond'n]] da et fort dèèl uutmakte van de zogenoamde Wellington-linie. 
+In [[1810]] zijn ze begost met de bouw van het ''Fort napoleon'' , en vier jaar later was't klaar. Maar toen was 't al nie meer nodig, omdat de [[franse]] onder ondertussn teruggetrokken waren. In [[26 juni]] werd beslist in de [[Conventie va Lon'n|Convensje van Lond'n]] da et fort dèèl uutmakte van de zogenoamde Wellington-linie. 
 
 Vanof [[1815]] woarn de [[Olland|Ollanders]] der gekazerneerd in wa da ondertussn het ''Fort William'' was gekomn. Mo et belang van 't fort naamt of, omda de Iengelsche nie mi de vijand woarn. 
 
