veranderienge 91629 van [[Special:Contributions/84.104.142.182|84.104.142.182]] were weggedoan

--- a/Fort_Napoleon.mw
+++ b/Fort_Napoleon.mw
@@ -1,21 +1,21 @@
 {{plat|Ostends}}
 [[Ofbeeldienge:Dia17.JPG|thumb|right|Luchtbeeld van het fort]]
 
-Het '''Fort Napoleon''' es een istorisch fort in [[Ostende (stad)|Ostende]]. 't Es in [[1810]] in ipdracht va [[Napoleon Bonaparte|Napoleon]] gebouwd gewist, om de dreigienge vanuut [[Iengeland]] te weerstoan.
+Het '''Fort Napoleon''' is een historisch fort in [[Ostende (stad)|Ostende]]. 't Is in [[1810]] in ipdracht van [[Napoleon Bonaparte|Napoleon]] gebouwd gewist, om de dreigienge vanuut [[Iengeland]] te weerstoan.
 
 ==Vorm==
-'t Fort is gebouwd volgens e vuufhoekig grondplan, me de punt no de zèè.
+'t Fort is gebouwd volgens e vuufhoekig groundplan, me de punt no de zèè.
 
 ==Geschiedenisse==
-In [[1810]] zijn ze begost met de bouw van het ''Fort napoleon'' , en vier jaar later was't klaar. Maar toen was 't al nie meer nodig, omdat de [[franse]] onder ondertussn teruggetrokken waren. In [[26 juni]] werd beslist in de [[Conventie va Lon'n|Convensje van Lond'n]] da et fort dèèl uutmakte van de zogenoamde Wellington-linie. 
+In [[1810]] zyn ze begost met de bouw van het ''Fort Impérial'', en vier joar loater was 't kloar. Mo ton was 't al nie mi nodig, omda de [[Vrankryk|Fransche]] under oundertussn teruggetrokkn aan. Ip 26 juni wierd beslist in de [[Conventie va Lon'n|Convensje van Londn]] da 't fort dèèl uutmakte van de zogenoamde Wellington-linie. 
 
-Vanof [[1815]] woarn de [[Olland|Ollanders]] der gekazerneerd in wa da ondertussn het ''Fort William'' was gekomn. Mo et belang van 't fort naamt of, omda de Iengelsche nie mi de vijand woarn. 
+Vanof [[1815]] woarn de [[Olland|Ollanders]] der gekazerneerd in wa da oundertussn het ''Fort William'' was gekomn. Mo et belang van 't fort naamt of, omda de Iengelsche nie mi de vyand woarn. 
 
-In [[1830]] kaamt 't fort in andn van 't [[België|Belgische]] leger. In [[1865]] wierd beslist da Ostende gin vestiengsstad mi was, en wierd et fort nie mi gebruukt voe militaire doeleindn, ollêne voe't gevangn oudn van Fransche soldoatn in de [[Frans-Prussischen Oorlog]] in [[1870]].
+In [[1830]] kaamt 't fort in andn van 't [[België|Belgisch]] leger. In [[1865]] wierd beslist da Ostende gin vestiengsstad mi was, en wierd et fort nie mi gebruukt voe militaire doeleindn, ollène voe 't gevangn oudn van Fransche soldoatn in de [[Frans-Prussischen Oorlog]] in [[1870]].
 
-In de [[Êeste Weireldoorloge|Êeste]] en de [[Twêede Weireldoorloge|Twêede Weireldorloge]] gebruuktn de [[Duutsland|Duutsers]] 't fort, da ondertussn ''Fort Napoleon'' noemt, in de verdedigienge teegn de Iengelsche. 
+In de [[Êeste Weireldoorloge|Eèste]] en de [[Twêede Weireldoorloge|Twidde Weireldorloge]] gebruuktn de [[Duutsland|Duutsers]] 't fort, da oundertussn ''Fort Napoleon'' noemt, in de verdedigienge teegn de Iengelsche. 
 
-Achter de orloogn verloor het fort mêer en mêer interesse van de militairn, en gerakt in verval. In [[1976]] wierd et tot beschermd monument benoemd, mo pas in [[1995]] begunt [[Erfgoed Vlaanderen]] et te restaureern. Vanof [[2000]] is't geopend vo 't grote publiek.
+Achter de orloogn verloor het fort mêer en mêer interesse van de militairn, en gerakt in verval. In [[1976]] wierd et tot beschermd monument benoemd, mo pas in [[1995]] begunt [[Erfgoed Vlaanderen]] et te restaureern. Vanof [[2000]] is 't geopend vo 't grote publiek.
 
 {{commons|Fort Napoleon (Oostende)|Fort Napoleon}}
 
