*Empty MediaWiki Message*

--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -16,9 +16,9 @@
   leftarm2=FFFFFF|body2=FFFFFF|rightarm2=FFFFFF|shorts2=FFFFFF|socks2=FFFFFF|
   geldig=2007/08
 }}
-'''Club Brugge KV''' is e [[België|Belgische]] [[voetbol]]club uut [[Brugge]]. 't Is één van de grôtste ploegn van 't land en de grôtste club in de provinsie [[West-Vloandern]]. De ploeg speelt in 't [[Jan Breydelstadium]] in [[Brugge]], woar dat ôok [[Cercle Brugge]] speelt. Club is by de [[KBVB]] angeslootn mè [[stamnumero 3]] en eet blauw-zwart vo koleurn. De club is ipgericht in [[1891]] en is dormee één van d'oukste clubs die nog actief zyn in Belgie. Z'èn ol veel titels en bekers gewonn. Over de latste joaren gezien zyn ze één van de twêe beste ploegn van 't land. 
+'''Club Brugge KV''' is e [[België|Belgische]] [[voetbol]]club uut [[Brugge]]. 't Is één van de grôtste ploegn van 't land en de grôtste club in de provincie [[West-Vloandern]]. De ploeg speelt in 't [[Jan Breydelstadium]] in [[Brugge]], woar dat ook [[Cercle Brugge]] speelt. Club is by de [[KBVB]] angeslootn mè [[stamnumero 3]] en eet blauw-zwart vo koleurn. De club is ipgericht in [[1891]] en is dormee één van d'oukste clubs die nog actief zyn in België. Z'èn ol veel titels en bekers gewonn. Over de latste joaren gezien zyn ze één van de twêe beste ploegn van 't land. 
 
-De club eet de reputoatie da ze een ploeg van werkers zyn. Van ol de Belgische ploegn is 't ene van de beste in Europa. Z'en ounder andere ol twêe kêern een Europeesche finale gespild. Da was ip 't ende van de joarn 70, mo ze verlôorn olle twêe de kêern van [[Liverpool FC]]. Sommigste van de beste speelders van 't land en ôok in Brugge gespeeld, gelik [[Raoul Lambert|Lotte Lambert]], [[Marc Degryse]], [[Jan Ceulemans]], [[Franky Van der Elst]] en [[Gert Verheyen]].
+De club eet de reputoatie da ze een ploeg van werkers zyn. Van ol de Belgische ploegn is 't één van de beste in Europa. Z'en ounder andere ol twêe kêern een Europeesche finale gespild. Da was ip 't ende van de joarn 70, mo ze verlôorn olle twêe de kêern van [[Liverpool FC]]. Sommigste van de beste speelders van 't land en ook in Brugge gespild, gelik [[Raoul Lambert|Lotte Lambert]], [[Marc Degryse]], [[Jan Ceulemans]], [[Franky Van der Elst]] en [[Gert Verheyen]].
 
 ==[[Êeste Klasse 2007-2008|Sezoen 2007/2008]]==
 Kykt [[Club Brugge/Sezoen 2006-2007|olier]] vor et sezoen 2006-2007 nog e ki t'erbeleevn.
