--- a/Stijn_Devolder.mw
+++ b/Stijn_Devolder.mw
@@ -1,12 +1,16 @@
 {{plat|Kortryks}}
 
-'''Stijn Devolder''' ([[Oarelbeke]], [[29 ogustus]] [[1979]]), ''Volderke'' voo de fans,  es nen [[West-Vloandern|West-Vlamsche]] [[coureur]]. Omda't ie nogol redelik omôge kan ryn en nen goein tydryder es, weirdt ie gezien als de bestn rounderenner va [[België]] van 't moment. 't Is e coureur die initiatief nimt at 'n goe bêenn et en ni te vele rekent moa geirn deurevlamt.
+'''Stijn Devolder''' ([[Oarelbeke]], [[29 ogustus]] [[1979]]), ''Volderke'' voo de fans,  es nen [[West-Vloandern|West-Vlamsche]] [[coureur]]. Omda't ie nogol redelik omôge kan ryn en nen goein tydryder es, weirdt ie gezien als de bestn rounderenner va [[België]] van 't moment. 't Is e coureur die initiatief nimt at 'n goe bêenn et en ni te vele rekent, moa geirn deurevlamt.
 
 ==Carrière==
-Stijn Devolder es ols dertienjoarige begonn by de wielerclub 'De Schildpadden'. In [[1994]] es't ie overgestapt noa de amateurploeg [[De Kortrijkse Groeningespurters]]. Ie es't er gebleevn tot in [[1999]]. Doarachter es't ie begunn ryn by de Merckx-boys, omda't ie ozô mêer internationoale wedstrydn koste ryn. 
+===Jeugdjoarn===
+Stijn Devolder es ols dertienjoarige begonn by de wielerclub 'De Schildpadden'. In [[1994]] es't ie overgestapt noa de amateurploeg [[De Kortrijkse Groeningespurters]]. By de nieuweliengn wos 'n ol froai goed (oundermêer en overwinnienge in 'n klemkoers van Forrières), mo 't is surtout byn de juniors dat 'n en echtn topper kwam. In zyn êeste joar wos 't ol 'n twin in 't Belgisch Kampioenschap in [[Rinnegelst]] achter Kevin Proost. E won oek twi joar tereke de [[Rounde va Vloandern]]. Ie es't er gebleevn tot in [[1999]]. Doarachter es't ie begunn ryn by de Merckx-boys, omda't ie ozô mêer internationoale wedstrydn koste ryen.
 
+Ze beste joar byn de beloftn wos 2001, woarin dat 'n de Vlamschn Pyl, de GP Woaregem, Zesbergnprys in Oarelbeke en d'eindzege in de Rounde va Luuk. E muchte da joar oek stoage doen byn Mapei, mor e contract en krêeg 'n doa nie. E muchte oek nie no 't weireldkampioenschap da joar. Byn [[Vlaanderen-T-Interim]] krêeg 'n wel e contract en kus 'n egliek prof kommn.  
+
+===Profcarrière===
 In [[2002]] es't ie prof gekoomn by [[Vlaanderen-T-Interim]]. Achter een poar ipmerkelike prestoaties (twidde in de GP Fayt-le Franc en derde in de [[E3 Prys Vloandern]] en êreplekkn in de [[Rounde van Vloandern]], Rund um Köln en de [[Vierdoagse van Duunkerke]]) mocht ie begunn by [[US Postal]] ounder [[Dirk Demol]] in [[2003]]. 
-In [[2004]] eit ie zyn êeste overwinnienge gehoald by de profs: ne rit in de Vierdoagse van Duunkerke. Stillekesan weirdt ôok duudelyk da't ie rounderennercapaciteitn eit, wa da leidde tot êreplekkn in vee roundes. In [[2007]] kwam doavan de bevestigienge, deur zyn eindoverwinnienge in de [[Rounde van Ôostnryk]]. Loater ip't joar eit ie ôok nog êene dag de goudn trui gedroagn in de [[Rounde van Spanje]], omda't ie êestes stound in't klassement. In 2008 kwam et vôorlôpige ôogtepunt van zyn carrière toen da't ie de [[Rounde van Vloandern]] won. Hêel de finale zat Devolder mee van vôorn, en ip e goeie 20 kilomeiters reed ie ollêne weg en blêef 't ie sterk deuregoan tout in Meerbeke.
+In [[2004]] eit ie zyn êeste overwinnienge gehoald by de profs: ne rit in de Vierdoagse van Duunkerke. Stillekesan weirdt ôok duudelik da't ie rounderennercapaciteitn eit, wa da leidde tot êreplekkn in vee roundes. In [[2007]] kwam doavan de bevestigienge, deur zyn eindoverwinnienge in de [[Rounde van Ôostnryk]]. Loater ip 't joar eit ie ôok nog êne dag de goudn trui gedroagn in de [[Rounde van Spanje]], omda't ie êestes stound in't klassement. In 2008 kwam et vôorlôpige ôogtepunt van zyn carrière toen da't ie de [[Rounde van Vloandern]] won. Hêel de finale zat Devolder mee van vôorn, en ip e goeie 20 kilomeiters reed ie ollêne weg en blêef 't ie sterk deuregoan tout in Meerbeke.
 
 ==Palmares==
 *2004: winnoare rit in vierdoagse van Duunkerke
@@ -25,10 +29,10 @@ In [[2004]] eit ie zyn êeste overwinnienge gehoald by de profs: ne rit in de Vi
 *2008: Rounde van Vloandern
 
 ==Ploegn==
-*2001 - [[Mapei (wielerploeg)|Mapei-Quick·Step]]
+*2001 - [[Mapei (wielerploeg)|Mapei-Quick·Step]] (stagiair)
 *2002 - Vlaanderen-T-Interim
 *2003 - Vlaanderen-T-Interim
-*2004 - US Postal (wielerploeg)|US Postal Service presented by Berry Floor
+*2004 - [[US Postal (wielerploeg)|US Postal-Berry Floor]]
 *2005 - [[Discovery Channel (wielerploeg)|Discovery Channel Pro Cycling Team]]
 *2006 - Discovery Channel Pro Cycling Team
 *2007 - Discovery Channel Pro Cycling Team
