--- a/Stijn_Devolder.mw
+++ b/Stijn_Devolder.mw
@@ -4,9 +4,9 @@
 
 ==Carrière==
 ===Jeugdjoarn===
-Stijn Devolder es ols dertienjoarige begonn by de wielerclub 'De Schildpadden'. In [[1994]] es't ie overgestapt noa de amateurploeg [[De Kortrijkse Groeningespurters]]. By de nieuweliengn wos 'n ol froai goed (oundermêer en overwinnienge in 'n klemkoers van Forrières), mo 't is surtout byn de juniors dat 'n en echtn topper kwam. In zyn êeste joar wos 't ol 'n twin in 't Belgisch Kampioenschap in [[Rinnegelst]] achter Kevin Proost. E won oek twi joar tereke de [[Rounde va Vloandern]]. Ie es't er gebleevn tot in [[1999]]. Doarachter es't ie begunn ryn by de Merckx-boys, omda't ie ozô mêer internationoale wedstrydn koste ryen.
+Stijn Devolder es ols dertienjoarige begonn by de wielerclub 'De Schildpadden'. In [[1994]] es't ie overgestapt noa de amateurploeg [[De Kortrijkse Groeningespurters]]. By de nieuweliengn wos 'n ol froai goed (oundermêer en overwinnienge in 'n klemkoers van Forrières), mo 't is surtout byn de juniors dat 'n en echtn topper kwam. In zyn êeste joar wos 't ol 'n twin in 't Belgisch Kampioenschap in [[Rinnegelst]] achter Kevin Proost. E won oek twi joar tereke de [[Rounde van Vloandern]]. Ie es't er gebleevn tot in [[1999]]. Doarachter es't ie begunn ryn by de Merckx-boys, omda't ie ozô mêer internationoale wedstrydn koste ryen.
 
-Ze beste joar byn de beloftn wos 2001, woarin dat 'n de Vlamschn Pyl, de GP Woaregem, Zesbergnprys in Oarelbeke en d'eindzege in de Rounde va Luuk. E muchte da joar oek stoage doen byn Mapei, mor e contract en krêeg 'n doa nie. E muchte oek nie no 't weireldkampioenschap da joar. Byn [[Vlaanderen-T-Interim]] krêeg 'n wel e contract en kus 'n egliek prof kommn.  
+Ze beste joar byn de beloftn wos 2001, woarin dat 'n de Vlamschn Pyl, de GP Woaregem, Zesbergnprys in Oarelbeke en d'eindzege in de Rounde va Luuk. E muchte da joar oek stoage doen byn Mapei, mor e contract en krêeg 'n doa nie. E muchte oek nie no 't weireldkampioenschap da joar. Byn [[Vlaanderen-T-Interim]] krêeg 'n wel e contract en kus 'n egliek prof kommn.
 
 ===Profcarrière===
 In [[2002]] es't ie prof gekoomn by [[Vlaanderen-T-Interim]]. Achter een poar ipmerkelike prestoaties (twidde in de GP Fayt-le Franc en derde in de [[E3 Prys Vloandern]] en êreplekkn in de [[Rounde van Vloandern]], Rund um Köln en de [[Vierdoagse van Duunkerke]]) mocht ie begunn by [[US Postal]] ounder [[Dirk Demol]] in [[2003]]. 
